--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-native-rich-text",
+  "description": "JavaScript only rich text input component for React Native. Compatible with Expo Go.",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
