wip: folder-structure

--- a/package.json
+++ b/package.json
@@ -24,15 +24,13 @@
     "example": "example"
   },
   "workspaces": [
-    "example/*"
+    "example"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3"
-  },
-  "peerDependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "expo": "~54.0.25",
     "react": "19.1.0",
     "react-native": "0.81.5"
