--- a/example/app.json
+++ b/example/app.json
@@ -7,6 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "autolinking": {
+      "searchPaths": ["../"]
+    },
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
