--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,8 @@
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "enriched-text-input": "file:../"
   },
   "private": true,
   "devDependencies": {
