--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "license": "MIT",
   "author": "Pato Sala",
-  "private": true,
+  "private": false,
   "main": "index.ts",
   "directories": {
     "example": "example"
